fixed missing padding on graph bottom cells

--- a/styles/components/graph.scss
+++ b/styles/components/graph.scss
@@ -103,6 +103,7 @@
     }
 
     &--bottom {
+      padding: 0 1rem;
       display: flex;
       justify-content: center;
       gap: 0rem;
